<resources>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="app_name">App Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing……</string>
    <string name="ptr_last_updated">Last updated: %1$s</string>
    <string name="action_settings">settings</string>
    <string name="net_connected_success">connection successful</string>
    <string name="net_connected_failure">connection failed</string>
    <string name="auto_login_info">automatic logging in ……</string>
    <string name="title_activity_splash">Splash page</string>
    <string name="title_activity_spec">Content page</string>
    <string name="title_activity_spec_detect_result">Results page</string>
    <string name="title_activity_spec_setting_list">Settings page</string>
    <string name="title_activity_spec_setting_mine">My information page</string>
    <string name="title_activity_spec_content_view">Single news page</string>
    <string name="title_activity_login">Login page</string>
    <string name="title_activity_loading">Loading</string>
    <string name="global_null_text" />
    <string name="bodyParts4face">Face</string>
    <string name="bodyParts4hand">Hand</string>
    <string name="bodyParts4eye">Eye</string>
    <string name="bodyParts4neck">Neck</string>
    <string name="bodypart">Part</string>
    <string name="detect_result">Test results</string>
    <string name="back">&lt; Return back</string>
    <string name="detect_result_average_value">Average value </string>
    <string name="detect_result_compare_lastest">Compared to last</string>
    <string name="detect_result_skin_status">Skin condition</string>
    <string name="detect_result_skin_care_suggestion">Skin proposal</string>
    <string name="detect_result_recommand_title">Olay Olay multi-effect repair beyond moisturizing cream moisturizing anti-wrinkle firming light pattern</string>
    <string name="detect_result_recommand_value">Antioxidant while Hold live dermis moistness , strengthen the skin free protection. Skin glow from the inside out new vitality.</string>
    <string name="skan_condition_value">
Skin moisture is more filling, smooth. In the acidic environment of the skin , it is more beautiful. .</string>
    <string name="ble_detect_timeless">
Please detecting at least five seconds !</string>
    <string name="ble_scan_devices">Searching , please open the Bluetooth device !</string>
    <string name="ble_not_supported">Your device does not support Bluetooth low energy</string>
    <string name="ble_os_version_low">
You can not use detection feature, which needs more than Android 4.3</string>
    <string name="ble_device_not_support">Your device can not use the Bluetooth services</string>
    <string name="ble_detect_valuelow">
The measured value is too small , make sure that the correct measurement site !</string>
    <string name="ble_detect_step_unstartble">
No connection</string>
    <string name="ble_detect_step_search">Bluetooth is not turned on</string>
    <string name="ble_detect_step_linked">Search device</string>
    <string name="ble_detect_step_detecting">Detecting</string>
    <string name="ble_detect_step_detected">Detection End</string>
    <string name="ble_detect_step_detecting_error">Detection unsuccessful</string>
    <string name="detect_report_day">Pro, you do not start today detect Oh !</string>
    <string name="detect_report_week">Pro , you have not started this week to detect Oh!</string>
    <string name="detect_report_month">
Pro , you have not started this month detect Oh!</string>
    <string name="detect_goto_detect">To detect</string>
    <string name="detect_goto_detail">View details</string>
    <string name="detect_part_hand">Hand</string>
    <string name="detect_part_face">Face</string>
    <string name="detect_part_eye">Eye</string>
    <string name="detect_suggestion">View suggestions</string>
    <string name="detect_result_dry">Dry</string>
    <string name="detect_result_medium">neutral</string>
    <string name="detect_result_moisture">mosit</string>
    <string name="detect_result_min_scale">10%</string>
    <string name="detect_result_middle1_scale">24%</string>
    <string name="detect_result_middle2_scale">30%</string>
    <string name="detect_result_max_scale">50%</string>
    <string name="device_status_start_scan">Searching</string>
    <string name="device_status_stop_scan">Search Stopped
Click here to re- search</string>
    <string name="device_status_not_connected">
Connection has been disconnected
Click here to re- search</string>
    <string name="device_status_only_connected">Connected</string>
    <string name="device_status_connecting">Connecting</string>
    <string name="device_status_detecting">Detecting </string>
    <string name="device_status_detecting_less_time">
Detection time is too short</string>
    <string name="device_status_detecting_low_value">
The detected value is too low</string>
    <string name="device_status_water_value">
Moisture value :</string>
    <string name="device_status_success_water_value">Detection is complete</string>
    <string name="nav_record">history record</string>
    <string name="nav_detect">
Detect</string>
    <string name="nav_setting">Personal Center</string>
    <string name="nav_content">	
Information</string>
    <string name="global_logout">Log out</string>
    <string name="global_back">back</string>
    <string name="loading_detect">
Scalp detection</string>
    <string name="loading_manage">Customer Management</string>
    <string name="loading_statistic">
Performance Statistics</string>
    <string name="loading_edit">Edit</string>
    <string name="loading_setting">settings</string>
    <string name="record_sex_hint">
Please select customer sex</string>
    <string name="record_sex_male">male</string>
    <string name="record_sex_female">female</string>
    <string name="record_next">next</string>
    <string name="detect_water_default_value">0.0%</string>
    <string name="detect_water_unit">PCT</string>
    <string name="record_time_type_day">today</string>
    <string name="record_time_type_week">This week</string>
    <string name="record_time_type_month">This month</string>
    <string name="record_time_type_average">average</string>
    <string name="charts4average">average</string>
    <string name="charts4result">
Detection times ：%1$s s times</string>
    <string name="charts4eyeRate">
Eye wrinkles appear rate</string>
    <string name="charts4eyeTensity">Eye skin tension</string>
    <string name="flag4pre">
Before nursing</string>
    <string name="flag4post">After Care</string>
    <string name="charts4faceCompareAge">
Facial skin than actual age</string>
    <string name="charts4youngAge">Young %1$s old</string>
    <string name="charts4oldAge">Old 1$s old</string>
    <string name="charts4faceTensity">
Facial skin moisture level</string>
    <string name="charts4handCompareAge">Hand skin than actual age</string>
    <string name="charts4handTensity">
Hand skin moisture level</string>
    <string name="charts4neckCompareAge">
Neck skin than actual age</string>
    <string name="charts4neckTensity">
Neck skin moisture level</string>
    <string name="chart_view_small">small</string>
    <string name="chart_view_big">big</string>
    <string name="date4year">year</string>
    <string name="date4month">month</string>
    <string name="date4date">date</string>
    <string name="week4sun">sunday</string>
    <string name="week4mon">monday</string>
    <string name="week4tue">tuesday</string>
    <string name="week4wed">wednesday</string>
    <string name="week4thu">thursday</string>
    <string name="week4fri">friday</string>
    <string name="week4sat">saturday</string>
    <string name="skin_health4normal">normal</string>
    <string name="skin_health4dry">dry</string>
    <string name="skin_health4moist">moist</string>
    <string name="skin_health4none">none</string>
    <string name="skin_healthLabel4status">Skin condition</string>
    <string name="skin_healthLabel4waterValue">Moisture value</string>
    <string name="skin_healthLabel4comparsion_day">Compared to last day</string>
    <string name="skin_healthLabel4comparsion_week">Compared to last week</string>
    <string name="skin_healthLabel4comparsion_month">Compared to last month</string>
    <string name="global_unlogin">Not logged in</string>
    <string name="user_info_setting">User settings</string>
    <string name="user_info_sync">Account sync</string>
    <string name="user_info_help">help</string>
    <string name="user_info_knowlege">Skin knowledge</string>
    <string name="user_info_common_question">common problem</string>
    <string name="user_info_reback">Feedback</string>
    <string name="user_info_version_update">new version update</string>
    <string name="user_info_sex_male">male</string>
    <string name="user_info_sex_female">female</string>
    <string name="user_info_sex">Gender</string>
    <string name="user_info_age">Age</string>
    <string name="detect_skin_type_neutral">Neutral Skin</string>
    <string name="detect_skin_type">Skin type</string>
    <string name="user_info_skin_type">Skin type</string>
    <string name="user_info_skin_type_neutral">neutral</string>
    <string name="current_day">Day averages</string>
    <string name="current_week">Weekly averages</string>
    <string name="current_month">Monthly average</string>
    <string name="record_nodata_day">Pro, you do not have data tomorrow Oh !</string>
    <string name="record_nodata_week">
Pro, you do not have data next week Oh !</string>
    <string name="record_nodata_month">亲，你还没有下个月的数据哦！</string>
    <string name="download_info_title">
Pro, you do not have next month s data Oh!</string>
    <string name="download_info_msg">
The latest package Oh , pro quickly download it~</string>
    <string name="download_info_yes">download</string>
    <string name="download_info_no">
talk about it later</string>
    <string name="download_info_concel">
cancel</string>
    <string name="user_login_account_hint">
Please enter the phone number</string>
    <string name="user_login_nickname_hint">
Please enter a nickname</string>
    <string name="user_login_password_hint">
Please enter your password</string>
    <string name="user_login_repassword_hint">Repeat password</string>
    <string name="user_login_btn">log in</string>
    <string name="spec_setting_mine">
Personal information</string>
</resources>