<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/id_spec_detect_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_test_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/id_detect_result_ly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_title_height"
        android:background="@color/normal_primary_color"
        android:gravity="center">

        <ImageView
            android:id="@id/id_detect_result_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/spec_setting_mine"
            android:onClick="onSpecViewClick"
            android:paddingEnd="@dimen/activity_horizontal_margin_m"
            android:paddingLeft="@dimen/activity_horizontal_margin_m"
            android:paddingRight="@dimen/activity_horizontal_margin_m"
            android:paddingStart="@dimen/activity_horizontal_margin_m"
            android:src="@drawable/ic_title_deliver_line" />

        <TextView
            android:id="@id/detect_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/id_detect_result_back"
            android:layout_toRightOf="@id/id_detect_result_back"
            android:gravity="left"
            android:text="@string/detect_result"
            android:textColor="@color/theme_primary_white"
            android:textSize="@dimen/font_sub_title1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/normal_primary_color"
            android:contentDescription="@string/global_null_text" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/normal_primary_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_m"
                android:layout_marginLeft="@dimen/activity_margin_m"
                android:layout_marginRight="@dimen/activity_margin_m"
                android:layout_marginStart="@dimen/activity_margin_m"
                android:layout_marginTop="@dimen/activity_margin_m"
                android:background="@drawable/x_detect_result_component_view"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_padding_s">

                    <TextView
                        android:id="@id/position_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:text="@string/bodyParts4hand"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:alpha="0.5"
                        android:gravity="left"
                        android:padding="@dimen/activity_padding_s"
                        android:text="@string/bodypart"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body2" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/detect_result_user_info_height"
                    android:background="#ffffff" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_padding_s">

                    <TextView
                        android:id="@id/sex_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:text="@string/user_info_sex_female"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:alpha="0.5"
                        android:gravity="left"
                        android:padding="@dimen/activity_padding_s"
                        android:text="@string/user_info_sex"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body2" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/detect_result_user_info_height"
                    android:background="#ffffff" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.24"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_padding_s">

                    <TextView
                        android:id="@id/age_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:alpha="0.5"
                        android:gravity="left"
                        android:padding="@dimen/activity_padding_s"
                        android:text="@string/user_info_age"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body2" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/detect_result_user_info_height"
                    android:background="#ffffff" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_padding_s">

                    <TextView
                        android:id="@id/skin_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:text="@string/detect_skin_type_neutral"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:alpha="0.5"
                        android:gravity="left"
                        android:padding="@dimen/activity_padding_s"
                        android:text="@string/detect_skin_type"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/font_body2" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@id/id_nurser_resutl_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_nurser_pre"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_nurser_pre"
                android:gravity="center"
                android:padding="@dimen/activity_padding_m"
                android:text="@string/flag4pre"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_m"
                android:layout_marginStart="@dimen/activity_margin_m"
                android:background="@drawable/x_detect_result_component_view"
                android:padding="@dimen/activity_padding_m">

                <com.mlizhi.widgets.cursor4water.WaterRangeView
                    app:bg_view_width="@dimen/water_range_width"
                    app:cursor_text_color="@color/theme_primary_gray"
                    app:dry_color="@color/dry_primary_color"
                    android:id="@id/id_water_range_view"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/water_range_width"
                    app:moist_color="@color/moist_primary_color"
                    app:normal_color="@color/normal_primary_color"
                    android:paddingBottom="@dimen/activity_padding_s"
                    android:paddingTop="@dimen/activity_padding_s"
                    app:text_color="@color/theme_primary_white"
                    app:text_size="5sp" />

                <View
                    android:id="@id/id_nurser_resutl_deliver"
                    android:background="#ffffff"
                    android:layout_below="@id/id_water_range_view"
                    android:layout_height="5dp"
                    android:layout_marginBottom="@dimen/activity_margin_s"
                    android:layout_marginTop="@dimen/activity_margin_s"
                    android:layout_width="match_parent" />

                <TextView
                    android:id="@id/id_nurser_result_arverage_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/id_nurser_resutl_deliver"
                    android:text="@string/detect_result_average_value"
                    android:textColor="@color/theme_primary_white"
                    android:visibility="visible" />

                <TextView
                    android:id="@id/id_nurser_result_compare_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/id_nurser_resutl_deliver"
                    android:drawableEnd="@drawable/ic_nurser_compare_up"
                    android:drawablePadding="2dp"
                    android:drawableRight="@drawable/ic_nurser_compare_up"
                    android:text="@string/detect_result_compare_lastest"
                    android:textColor="@color/theme_primary_white" />
            </RelativeLayout>

            <TextView
                android:id="@id/id_skan_condition_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_result_information_image"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_result_information_image"
                android:gravity="center"
                android:padding="@dimen/activity_padding_m"
                android:text="@string/detect_result_skin_status"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@id/id_skan_condition_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_m"
                android:layout_marginStart="@dimen/activity_margin_m"
                android:background="@drawable/x_detect_result_component_view"
                android:padding="@dimen/activity_padding_m"
                android:text="@string/skan_condition_value"
                android:textColor="#ffffff"
                android:textSize="@dimen/font_body1" />

            <TextView
                android:id="@id/id_detect_result_skin_care_suggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_result_usestate_image"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_result_usestate_image"
                android:gravity="center"
                android:padding="@dimen/activity_padding_m"
                android:text="@string/detect_result_skin_care_suggestion"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@id/hufurelativelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_m"
                android:layout_marginEnd="@dimen/activity_margin_m"
                android:layout_marginStart="@dimen/activity_margin_m"
                android:background="@drawable/x_detect_result_component_view"
                android:orientation="vertical">

                <ImageView
                    android:id="@id/id_detect_result_recommand_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:padding="@dimen/activity_padding_m"
                    android:src="@drawable/ic_load_fail_holder"
                    android:visibility="visible" />

                <TextView
                    android:id="@id/id_detect_result_recommand_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/activity_padding_m"
                    android:text="@string/detect_result_recommand_title"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@id/id_detect_result_recommand_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/activity_padding_m"
                    android:text="@string/detect_result_recommand_value"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
